--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/test.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/miker83z/fantastic-memory#readme",
   "dependencies": {
+    "ipfs-http-client": "^49.0.4",
+    "uint8arrays": "^2.1.3",
     "web3": "^1.3.4"
   }
 }
