--- a/smart-contract-template/package.json
+++ b/smart-contract-template/package.json
@@ -13,5 +13,8 @@
   "license": "MIT",
   "dependencies": {
     "@openzeppelin/contracts": "^4.0.0"
+  },
+  "devDependencies": {
+    "@truffle/hdwallet-provider": "1.2.3"
   }
 }
