--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "ipfs-http-client": "^49.0.4",
     "uint8arrays": "^2.1.3",
     "web3": "^1.3.4"
+  },
+  "devDependencies": {
+    "@truffle/hdwallet-provider": "1.2.3"
   }
 }
