--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node test/test.js"
+    "test": "node test/test.js",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -19,9 +20,12 @@
   "dependencies": {
     "ipfs-http-client": "^49.0.4",
     "uint8arrays": "^2.1.3",
-    "web3": "^1.3.4"
+    "web3": "^1.3.4",
+    "algosdk": "^1.8.1"
   },
   "devDependencies": {
-    "@truffle/hdwallet-provider": "1.2.3"
+    "@truffle/hdwallet-provider": "1.2.3",
+    "webpack": "^5.37.1",
+    "webpack-cli": "^4.7.0"
   }
 }
