--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   },
   "homepage": "https://github.com/miker83z/fantastic-memory#readme",
   "dependencies": {
+    "algosdk": "^1.8.1",
     "ipfs-http-client": "^49.0.4",
     "uint8arrays": "^2.1.3",
-    "web3": "^1.3.4",
-    "algosdk": "^1.8.1"
+    "web3": "^1.3.4"
   },
   "devDependencies": {
     "@truffle/hdwallet-provider": "1.2.3",
