--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
   "homepage": "https://github.com/miker83z/fantastic-memory#readme",
   "dependencies": {
     "algosdk": "^1.8.1",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
     "ipfs-http-client": "^49.0.4",
+    "path-browserify": "^1.0.1",
+    "source-map-loader": "^3.0.0",
+    "stream-browserify": "^3.0.0",
     "uint8arrays": "^2.1.3",
     "web3": "^1.3.4"
   },
